# normHDPcpp

./: .Rhistory  DESCRIPTION  NAMESPACE  ensemble_results_500.rds
R/: RcppExports.R
src/: CMakeLists.txt  Makevars  RcppExports.cpp  allocation_z.cpp  alpha.cpp  alpha_zero.cpp  capture_efficiencies.cpp  component_probabilities.cpp  dataset_specific.cpp  ensemble_mcmc.cpp  mean_dispersion.cpp  mean_dispersion_horseshoe.cpp  mean_dispersion_regularized_horseshoe.cpp  mean_dispersion_spike_slab.cpp  normHDP_mcmc.cpp  normHDP_mcmc_fixed_z.cpp  time_effects.cpp  unique_parameters.cpp  utils.cpp
src/includes/: allocation_z.h  alpha.h  alpha_zero.h  capture_efficiencies.h  component_probabilities.h  dataset_specific.h  ensemble_mcmc.h  mean_dispersion.h  mean_dispersion_horseshoe.h  mean_dispersion_regularized_horseshoe.h  mean_dispersion_spike_slab.h  normHDP_mcmc.h  normHDP_mcmc_fixed_z.h  time_effects.h  unique_parameters.h  utils.h
src/normHDP_cpp/: ensemble_mcmc.cpp
